fixing overflow

--- a/src/index.css
+++ b/src/index.css
@@ -34,8 +34,6 @@ html, body {
 body { 
   display: flex;
   align-items: stretch;
-  min-width: 320px;
-  min-height: 100vh;
 }
 
 h1 {
